[package]
name = "ioctl-dvb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.29.0", features = ["fs", "ioctl"] }

[build-dependencies]
bindgen = "0.69.4"
once_cell = "1.19.0"
regex = "1.10.6"
